force-app/main/default/objects/VehicleDocuments__c/VehicleDocuments__c.object-meta.xml
<CustomObject>
    <label>Vehicle Documents</label>
    <nameField>
        <label>Insurance Policy</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>