force-app/main/default/objects/VehicleDocuments__c/fields/FitnessCertificate__c.field-meta.xml
<CustomField>
    <fullName>FitnessCertificate__c</fullName>
    <label>Fitness Certificate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>