force-app/main/default/objects/VehicleDocuments__c/fields/PermitCertificate__c.field-meta.xml
<CustomField>
    <fullName>PermitCertificate__c</fullName>
    <label>Permit Certificate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>