force-app/main/default/objects/VehicleDocuments__c/fields/PUCCertificate__c.field-meta.xml
<CustomField>
    <fullName>PUCCertificate__c</fullName>
    <inlineHelpText>Pollution Under Control Certificate</inlineHelpText>
    <label>PUC Certificate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>