force-app/main/default/objects/VehicleDocuments__c/fields/RegistrationCertificate__c.field-meta.xml
<CustomField>
    <fullName>RegistrationCertificate__c</fullName>
    <label>Registration Certificate</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Vehicle Documents</relationshipLabel>
    <relationshipName>Vehicle_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>