force-app/main/default/objects/VehicleDocuments__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RegistrationCertificate__c</columns>
    <columns>NAME</columns>
    <columns>FitnessCertificate__c</columns>
    <columns>PermitCertificate__c</columns>
    <columns>PUCCertificate__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>